syntax = "proto3";

package sitral.registry;

message RegistryRequest {
  oneof msg {
    RegisterPublisher register_publisher = 1;
    QueryPublishers   query_publishers   = 2;
  }
}

message RegisterPublisher {
    string topic = 1; 
    string type = 2; 
    int32 port = 3; 
}

message QueryPublishers {
    string topic = 1; 
}

message PublisherInfo {
  string ip   = 1;
  uint32 port = 2;
  string type = 3;
}

message RegistryResponse {
  oneof msg {
    QueryPublishersResponse query_publishers_response = 1; 
  }
}

message QueryPublishersResponse {
  repeated PublisherInfo publishers = 1;
}
